--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,16 +1,6 @@
-<html>
-    <head>
-        <title>To-Do lists</title>
-    </head>
-    <body>
-        <h1>Your To-Do list</h1>
-            <form method="POST">
-                <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-                {% csrf_token %}
-            </form>
+{% extends 'base.html' %}
 
-        <table id="id_list_table">
-            <tr><td>1: {{  new_item_text }}</td></tr>
-        </table>
-    </body>
-</html>
+{% block header_text %}Start a new To-Do list{% endblock %}
+
+{% block form_action %}/lists/new{% endblock %}
+
